@@ -876,4 +876,5 @@
 			<resource resourceType="PROJECT" workspacePath="/FX3fw"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
