@@ -1,2 +1,4 @@
+2019-06-16
+; bugfix FX3 callback _SETCONF
 2019-03-14
 ; Initial Release
